# axum-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PROJECT_IDEA.md  README.md  docker-compose.yml
src/: api.rs  lib.rs  main.rs  routes.rs  state.rs
src/config/: env.rs
src/handlers/: docs.rs  mod.rs
src/models/: mod.rs
templates/: index.html
